# OpenMp

Additional-tasks/: CMakeLists.txt  CopyIn.cpp  CopyPrivate.cpp  Merge-sort.cpp  Nested.cpp  Schedule.cpp
Additional-tasks/Merge-sort-results/: Report.ipynb  Size-time  Threads-optimal-time  Threads-time  Threashlod-time-12  Threashold-time-1  Threashold-time-12
Additional-tasks/OpenCL-merge-sort/: CMakeLists.txt  Merge.cl  main.cpp
Additional-tasks/OpenCL-merge-sort/include/: Driver.h
Base-tasks/: CMakeLists.txt  Task1.cpp  Task2.cpp
Lab-2/: 1-g-time-threads-without-sleep.res  1-g-time-threads.res  1-g.cpp  2-g-time-threads-without-sleep.res  2-g.cpp  3-g-time-threads-without-sleep.res  3-g.cpp  CMakeLists.txt  Info.md  Manager.h  Matrix.h  Report.ipynb
include/: Utils.h
